--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,17 @@
 	<title>Django Blog</title>
 </head>
 <body>
-	<h2>Hello World!</h2>
-	It works!
+	<h2>Hello World! It works!</h2>
+
+	<br>
+	
+		{% for post in posts %}
+			<div>
+				<p>published: {{post.published_date}} </p>
+				<h1><a href="">{{ post.title }}</a></h1>
+				<p>{{ post.text | linebreaksbr }}</p>
+			</div>
+		{% endfor %}
+
 </body>
 </html>
