--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Django Blog</title>
-</head>
-<body>
-	<h2>Hello World! It works!</h2>
+<!-- connecting to base.html -->
+{% extends 'blog/base.html' %}
 
-	<br>
-	
-		{% for post in posts %}
-			<div>
-				<p>published: {{post.published_date}} </p>
-				<h1><a href="">{{ post.title }}</a></h1>
-				<p>{{ post.text | linebreaksbr }}</p>
-			</div>
-		{% endfor %}
-
-</body>
-</html>
+<!-- define content that will be linked to base.html -->
+{% block content %}
+	{% for post in posts %}
+	    <div class="post">
+	        <div class="date">
+	            {{ post.published_date }}
+	        </div>
+	        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+	        <p>{{ post.text|linebreaksbr }}</p>
+	    </div>
+	{% endfor %}
+{% endblock %}
